Fix multiple addresses.